tests/ui/suggestions/issue-99240.stderr
error[E0618]: expected function, found `Option<impl FnOnce()>`
  --> $DIR/issue-99240.rs:2:5
   |
LL |     (it.0.take())()
   |     ^^^^^^^^^^^^^--
   |     |
   |     call expression requires function

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0618`.
